# ciftl-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CiftlConfig.cmake.in  README.md  vcpkg.json
include/ciftl/crypter/: aes.h  chacha20.h  core_crypter.h  crypter.h  mock.h  openssl.h  sm4.h
include/ciftl/encoding/: base64.h  core_encoding.h  encoding.h  hex.h
include/ciftl/etc/: error.h  etc.h  memory.h  result.h  type.h
include/ciftl/hash/: hash.h  hasher.h
src/crypter/: aes.cpp  chacha20.cpp  core_crypter.cpp  sm4.cpp
src/encoding/: base64.cpp  core_encoding.cpp  hex.cpp
src/etc/: error.cpp
src/hash/: hasher.cpp
tests/: CMakeLists.txt  test_core.cpp  test_crypter.cpp  test_encoding.cpp  test_hash.cpp
